--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>C.N. PORTFOLIO</title>
+        <link rel="icon" type="svg" href="/assets/logo/thirdeyekitty.svg">
         <link rel="stylesheet" href="styles.css">
         <body>
             <div class = "header">
                 <img src="assets/logo/kitty.svg" alt="logo" class="logo">
-                <h1 style="margin: 0; padding-top: 1rem;">Celina Nguyen</h1>
-                <p>software developer with a love</p>
+                <h1 style="margin: 0; padding-top: 0.5rem; padding-bottom: 0.5rem;">Celina Nguyen</h1>
+                <p>Software developer with a love</p>
                 <p>for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
+                <p style="font-size: 0.7rem; font-weight: 600; padding: 2rem;">* All my projects are designed with empathy</p>
             </div>
         </body>
 </html>
