Eye tracking mouse event

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
         <link rel="stylesheet" href="styles.css">
         <body>
             <div class = "header">
-                <img src="assets/logo/kitty.svg" alt="logo" class="logo">
+                <div class="kittyface">
+                    <img src="assets/logo/kitty.svg" alt="logo" class="logo" style="width: 45vw;">
+                    <img src="assets/logo/pupil.svg" alt="kitty eye" class="eye" style="width: 8vw;">
+                </div>
                 <h1 style="margin: 0; padding-top: 0.5rem; padding-bottom: 0.5rem;">Celina Nguyen</h1>
                 <p>Software developer with a love</p>
                 <p>for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
                 <p style="font-size: 0.7rem; font-weight: 600; padding: 2rem;">* All my projects are designed with empathy</p>
             </div>
+            <script src="script.js"></script>
         </body>
 </html>
 
