Add knowledge section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
                 <p>Software developer with a love</p>
                 <p>for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
                 <p style="font-size: 0.7rem; font-weight: 600; padding: 2rem;">* All my projects are designed with empathy</p>
+                <div class="knowledge">
+                    <p class="skillTitle">Languages</p>
+                    <p class="skill">HTML5, CSS3, Python, C#, Javascript, SQL</p>
+
+                    <p class="skillTitle">Libraries</p>
+                    <p class="skill">React, Node.js, Three.js</p>
+
+                    <p class="skillTitle">Tools</p>
+                    <p class="skill">Git, Linux</p>
+                </div>
             </div>
+
             <script src="script.js"></script>
         </body>
 </html>
