Centers eye by default
No more hard coding

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <body>
             <div class = "header">
                 <div class="kittyface">
-                    <img src="assets/logo/kitty.svg" alt="logo" class="logo" style="width: 45vw;">
-                    <img src="assets/logo/pupil.svg" alt="kitty eye" class="eye" style="width: 8vw;">
+                    <img src="assets/logo/kitty.svg" alt="logo" class="logo">
+                    <img src="assets/logo/pupil.svg" alt="kitty eye" class="eye">
                 </div>
                 <h1 style="margin: 0; padding-top: 0.5rem; padding-bottom: 0.5rem;">Celina Nguyen</h1>
                 <p>Software developer with a love</p>
