Add projects section

--- a/index.html
+++ b/index.html
@@ -7,24 +7,33 @@
         <link rel="icon" type="svg" href="/assets/logo/thirdeyekitty.svg">
         <link rel="stylesheet" href="styles.css">
         <body>
-            <div class = "header">
+            <div class="header">
                 <div class="kittyface">
                     <img src="assets/logo/kitty.svg" alt="logo" class="logo">
                     <img src="assets/logo/pupil.svg" alt="kitty eye" class="eye">
                 </div>
-                <h1 style="margin: 0; padding-top: 0.5rem; padding-bottom: 0.5rem;">Celina Nguyen</h1>
+                <h1 style="margin: 0; margin-top: 0.5rem; margin-bottom: 0.5rem;">Celina Nguyen</h1>
                 <p>Software developer with a love</p>
                 <p>for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
-                <p style="font-size: 0.7rem; font-weight: 600; padding: 2rem;">* All my projects are designed with empathy</p>
-                <div class="knowledge">
-                    <p class="skillTitle">Languages</p>
-                    <p class="skill">HTML5, CSS3, Python, C#, Javascript, SQL</p>
+                <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed with empathy</p>
+                <div class="section">
+                    <p class="subTitle">Languages</p>
+                    <p class="subText">HTML5, CSS3, Python, C#, Javascript, SQL</p>
 
-                    <p class="skillTitle">Libraries</p>
-                    <p class="skill">React, Node.js, Three.js</p>
+                    <p class="subTitle">Libraries & Frameworks</p>
+                    <p class="subText">React, Node.js, Three.js, Electron</p>
 
-                    <p class="skillTitle">Tools</p>
-                    <p class="skill">Git, Linux</p>
+                    <p class="subTitle">Tools</p>
+                    <p class="subText">Figma, Git, Linux</p>
+                    
+                    <p class="subTitle" style="margin-top: 1.5rem;">Projects</p>
+                    <p class="subText" style="margin: 0;">Ditto</p>
+                    <p style="margin-bottom: 0.2rem; font-size: 0.7rem; font-style: italic;">Electron, HTML, CSS, Javascript</p>
+                    <p class="subText">A Windows desktop app built with Electron. 
+                        Features an interactive (add, edit, delete) to-do list & responsive UI.</p>
+                        <div class="preview">
+                            <img class="gif" src="assets/projects/ditto_walkthrough.gif" alt="ditto gif walkthrough">
+                        </div>
                 </div>
             </div>
 
