Add preview button
- Fade in preview when hovered

--- a/index.html
+++ b/index.html
@@ -27,14 +27,23 @@
                     <p class="subText">Figma, Git, Linux</p>
                     
                     <p class="subTitle" style="margin-top: 1.5rem;">Projects</p>
-                    <p class="subText" style="margin: 0;">Ditto</p>
-                    <p style="margin-bottom: 0.2rem; font-size: 0.7rem; font-style: italic;">Electron, HTML, CSS, Javascript</p>
+                    <p class="subText" style="margin: 0; font-weight: 600;">Ditto</p>
+                    <p style="margin-bottom: 0.3rem; font-size: 0.7rem; font-style: italic;">Electron, HTML, CSS, Javascript</p>
                     <p class="subText">A Windows desktop app built with Electron. 
                         Features an interactive (add, edit, delete) to-do list & responsive UI.</p>
+                            <button class="preview-button">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/ditto_walkthrough.gif" alt="ditto gif walkthrough">
+                            <img class="gif" src="assets/projects/ditto_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 55vw;">
                         </div>
-                </div>
+
+                        <p class="subText" style="margin: 0; font-weight: 600;">Ongles Spa Royal</p>
+                    <p style="margin-bottom: 0.3rem; font-size: 0.7rem; font-style: italic;">React, HTML, CSS, Javascript</p>
+                    <p class="subText">Informative 4-page business website for a nail salon. </p>
+                            <button class="preview-button">Preview</button>
+                        <div class="preview">
+                            <img class="gif" src="assets/projects/website_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 70vw;">
+                        </div>
+                    </div>
             </div>
 
             <script src="script.js"></script>
