--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <p>for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
                 <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed with empathy</p>
                 <div class="section">
-                    <p class="subTitle">Languages</p>
+                    <p class="subTitle" style="margin-top: 0.5rem;">Languages</p>
                     <p class="subText">HTML5, CSS3, Python, C#, Javascript, SQL</p>
 
-                    <p class="subTitle">Libraries & Frameworks</p>
+                    <p class="subTitle" >Libraries & Frameworks</p>
                     <p class="subText">React, Node.js, Three.js, Electron</p>
 
                     <p class="subTitle">Tools</p>
                     <p class="subText">Figma, Git, Linux</p>
                     
-                    <p class="subTitle" style="margin-top: 1.5rem;">Projects</p>
+                    <p class="subTitle" style="margin-top: 2rem;">Projects</p>
                     <p class="subText" style="margin: 0; font-weight: 600;">Ditto</p>
                     <p style="margin-bottom: 0.3rem; font-size: 0.7rem; font-style: italic;">Electron, HTML, CSS, Javascript</p>
                     <p class="subText">A Windows desktop app built with Electron. 
@@ -43,9 +43,13 @@
                         <div class="preview">
                             <img class="gif" src="assets/projects/website_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 70vw;">
                         </div>
+                        <p class="subTitle" style="margin-top: 2rem;">Wanna make something special?</p>
+                        <p class="subText" style="margin: 0;">Reach me by e-mail: ngcelinaa@gmail.com</p>
+                        <p class="subText">QC ‒‒ ON, CA</p>
+                        
                     </div>
+                    <p class="copyright" style="font-size: 0.8rem; margin-top: 4rem; padding-bottom: 2em;">© <span id="year"></span> Celina Nguyen</p>
             </div>
-
             <script src="script.js"></script>
         </body>
 </html>
