Font size changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                     <img src="assets/logo/pupil.svg" alt="kitty eye" class="eye">
                 </div>
                 <h1 style="margin: 0; margin-top: 0.5rem; margin-bottom: 0.5rem;">Celina Nguyen</h1>
-                <p>Software developer with a love</p>
-                <p>for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
+                <p style="font-size: 1rem;">Software developer with a love</p>
+                <p style="font-size: 1rem;">for design & whimsy ٩(ˊᗜˋ*)و ♡</p>
                 <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed with empathy</p>
                 <div class="section">
                     <p class="subTitle" style="margin-top: 0.5rem;">Languages</p>
