Fix: scroll issues with gifs

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
                 </div>
                 <h1 style="margin: 0; margin-top: 0.5rem; margin-bottom: 0.5rem;">Celina Nguyen</h1>
                 <p style="font-size: 1rem;">Software developer with a love</p>
-                <p style="font-size: 1rem;">for design & whimsy <span style="color: #4bb8a9;">٩(ˊᗜˋ*)و ♡</span></p>
+                <p style="font-size: 1rem;">for design & whimsy <span style="color: #44afa1;">٩(ˊᗜˋ*)و ♡</span></p>
                 <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed with empathy</p>
                 <div class="section">
-                    <p class="subTitle" style="margin-top: 0.5rem;">Languages ໒꒱</p>
+                    <p class="subTitle" style="margin-top: 0.5rem;">Languages <span style="color: #44afa1;">໒꒱</span></p>
                     <p class="subText">HTML5, CSS3, Python, C#, Javascript, SQL</p>
 
-                    <p class="subTitle" >Libraries & Frameworks ໒꒱</p>
+                    <p class="subTitle" >Libraries & Frameworks <span style="color: #44afa1;">໒꒱</span></p>
                     <p class="subText">React, Node.js, Three.js, Electron</p>
 
-                    <p class="subTitle">Tools ໒꒱</p>
+                    <p class="subTitle">Tools <span style="color: #44afa1;">໒꒱</span></p>
                     <p class="subText">Figma, Git, Linux</p>
                     
-                    <p class="subTitle" style="margin-top: 2rem;">Projects .𖥔 ݁ ⊹˖๋ ࣭ ⭑</p>
+                    <p class="subTitle" style="margin-top: 2rem;">Projects <span style="color: #44afa1;">. ⊹˖๋ ࣭ ⭑</span></p>
                     <p class="subText" style="margin: 0; font-weight: 600;">Ditto</p>
                     <p style="margin-bottom: 0.3rem; font-size: 0.7rem; font-style: italic;">Electron, HTML, CSS, Javascript</p>
                     <p class="subText">A Windows desktop app built with Electron. 
@@ -43,7 +43,7 @@
                         <div class="preview">
                             <img class="gif" src="assets/projects/website_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 70vw;">
                         </div>
-                        <p class="subTitle" style="margin-top: 2rem;">Wanna make something special? ⊹₊｡ꕤ˚₊⊹</p>
+                        <p class="subTitle" style="margin-top: 2rem;">Wanna make something special? <span style="color: #44afa1;">⊹₊｡ꕤ˚₊⊹</span></p>
                         <p class="subText" style="margin: 0;">Reach me by e-mail: ngcelinaa@gmail.com</p>
                         <p class="subText">QC ‒‒ ON, CA</p>
                         
