--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 style="margin: 0; margin-top: 0.5rem; margin-bottom: 0.5rem;">Celina Nguyen</h1>
                 <p style="font-size: 0.9rem;">Software developer with a love</p>
                 <p style="font-size: 0.9rem;">for design & whimsy <span style="color: #44afa1;">٩(ˊᗜˋ*)و ♡</span></p>
-                <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed with empathy</p>
+                <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed w/ empathy</p>
                 <div class="section">
                     <p class="subTitle" style="margin-top: 0.5rem;">Languages <span style="color: #44afa1;">໒꒱</span></p>
                     <p class="subText">HTML5, CSS3, Python, C#, Javascript, SQL</p>
@@ -33,22 +33,22 @@
                         Features an interactive (add, edit, delete) to-do list & responsive UI.</p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/ditto_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 55vw;">
+                            <img class="gif" src="assets/projects/ditto_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 55%;">
                         </div>
 
-                        <p class="subText" style="margin: 0; font-weight: 600;">Ongles Spa Royal</p>
+                        <p class="subText" style="margin: 0; font-weight: 600; margin-top: 1rem;">Ongles Spa Royal</p>
                     <p style="margin-bottom: 0.3rem; font-size: 0.7rem; font-style: italic; ">React, HTML, CSS, Javascript</p>
                     <p class="subText">Informative 4-page business website for a nail salon. </p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/website_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 70vw;">
+                            <img class="gif" src="assets/projects/website_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 85%;">
                         </div>
                         <p class="subTitle" style="margin-top: 2rem;">Wanna make something special? <span style="color: #44afa1;">⊹₊｡ꕤ˚₊⊹</span></p>
                         <p class="subText" style="margin: 0;">Reach me by e-mail: ngcelinaa@gmail.com</p>
                         <p class="subText">QC ‒‒ ON, CA</p>
                         
                     </div>
-                    <p class="copyright" style="font-size: 0.8rem; margin-top: 4rem; padding-bottom: 2em;">© <span id="year"></span> Celina Nguyen</p>
+                    <p class="copyright" style="font-size: 0.8rem; margin-top: 4rem; padding-bottom: 2em; color: #44afa1;">© <span id="year"></span> Celina Nguyen</p>
             </div>
             <script src="script.js"></script>
         </body>
