Add project and rename files

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
                         Features an interactive (add, edit, delete) to-do list & responsive UI.</p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/ditto_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 55%;">
+                            <img class="gif" src="assets/projects/ditto_pre.gif" alt="ditto gif walkthrough" style="max-width: 55%;">
+                        </div>
+
+                        <p class="subText" style="margin: 0; font-weight: 600; margin-top: 1rem;">Junkpress</p>
+                    <p style="margin-bottom: 0.3rem; font-size: 0.7rem; font-style: italic; ">Python, HTML, CSS</p>
+                    <p class="subText">Magic 8ball simulator for Junkpress' creative zine. </p>
+                            <button class="preview-button" onclick="togglePreview(this)">Preview</button>
+                        <div class="preview">
+                            <img class="gif" src="assets/projects/8ball_pre.gif" alt="ditto gif walkthrough" style="max-width: 85%;">
                         </div>
 
                         <p class="subText" style="margin: 0; font-weight: 600; margin-top: 1rem;">Ongles Spa Royal</p>
@@ -41,8 +49,9 @@
                     <p class="subText">Informative 4-page business website for a nail salon. </p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/website_walkthrough.gif" alt="ditto gif walkthrough" style="max-width: 85%;">
+                            <img class="gif" src="assets/projects/website_pre.gif" alt="ditto gif walkthrough" style="max-width: 85%;">
                         </div>
+
                         <p class="subTitle" style="margin-top: 2rem;">Wanna make something special? <span style="color: #44afa1;">⊹₊｡ꕤ˚₊⊹</span></p>
                         <p class="subText" style="margin: 0;">Reach me by e-mail: ngcelinaa@gmail.com</p>
                         <p class="subText">QC ‒‒ ON, CA</p>
