--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                     <img src="assets/logo/pupil.svg" alt="kitty eye" class="eye">
                 </div>
                 <h1 style="margin: 0; margin-top: 0.5rem; margin-bottom: 0.5rem;">Celina Nguyen</h1>
-                <p style="font-size: 0.9rem;">Software developer with a love</p>
-                <p style="font-size: 0.9rem;">for design & whimsy <span style="color: #44afa1;">٩(ˊᗜˋ*)و ♡</span></p>
-                <p style="font-size: 0.7rem; font-weight: 600; margin-top: 1rem; margin-bottom: 2.5rem;">* All my projects are designed w/ empathy</p>
+                <p class="bio">Software developer with a love</p>
+                <p class="bio">for design & whimsy <span style="color: #44afa1;">٩(ˊᗜˋ*)و ♡</span></p>
+                <p id="warning">* All my projects are designed w/ empathy</p>
                 <div class="section">
                     <p class="subTitle" style="margin-top: 0.5rem;">Languages <span style="color: #44afa1;">໒꒱</span></p>
                     <p class="subText">HTML5, CSS3, Python, C#, Javascript, SQL</p>
@@ -33,7 +33,7 @@
                         Features an interactive (add, edit, delete) to-do list & responsive UI.</p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/ditto_pre.gif" alt="ditto gif walkthrough" style="max-width: 55%;">
+                            <img id="ditto" src="assets/projects/ditto_pre.gif" alt="ditto gif walkthrough">
                         </div>
 
                         <p class="subText" style="margin: 0; font-weight: 600; margin-top: 1rem;">Junkpress</p>
@@ -41,7 +41,7 @@
                     <p class="subText">Magic 8ball simulator for Junkpress' creative zine. </p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/8ball_pre.gif" alt="ditto gif walkthrough" style="max-width: 85%;">
+                            <img class="gif" src="assets/projects/8ball_pre.gif" alt="ditto gif walkthrough">
                         </div>
 
                         <p class="subText" style="margin: 0; font-weight: 600; margin-top: 1rem;">Ongles Spa Royal</p>
@@ -49,15 +49,16 @@
                     <p class="subText">Informative 4-page business website for a nail salon. </p>
                             <button class="preview-button" onclick="togglePreview(this)">Preview</button>
                         <div class="preview">
-                            <img class="gif" src="assets/projects/website_pre.gif" alt="ditto gif walkthrough" style="max-width: 85%;">
+                            <img class="gif" src="assets/projects/website_pre.gif" alt="ditto gif walkthrough">
                         </div>
 
                         <p class="subTitle" style="margin-top: 2rem;">Wanna make something special? <span style="color: #44afa1;">⊹₊｡ꕤ˚₊⊹</span></p>
                         <p class="subText" style="margin: 0;">Reach me by e-mail: ngcelinaa@gmail.com</p>
+                        <a class="subText" href="https://github.com/cel004" target="_blank" rel="noopener noreferrer">GitHub</a>
                         <p class="subText">QC ‒‒ ON, CA</p>
                         
                     </div>
-                    <p class="copyright" style="font-size: 0.8rem; margin-top: 4rem; padding-bottom: 2em; color: #44afa1;">© <span id="year"></span> Celina Nguyen</p>
+                    <p class="copyright" style="font-size: 0.8rem; font-weight: 600; margin-top: 8rem; margin-bottom: 3rem; color: #44afa1;">© <span id="year"></span> Celina Nguyen</p>
             </div>
             <script src="script.js"></script>
         </body>
