--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>C.N. PORTFOLIO</title>
-        <link rel="icon" type="svg" href="/assets/logo/thirdeyekitty.svg">
+        <link rel="icon" type="svg" href="./assets/logo/thirdeyekitty.svg">
         <link rel="stylesheet" href="styles.css">
         <body>
             <div class="header">
